Changed contact page. Modified homepage to include carousel

--- a/templates/about.html
+++ b/templates/about.html
@@ -28,6 +28,15 @@
   <div class="row">
     <div class="col-12"> <h1>About</h1> </div>
   </div>
+  <div class="row">
+    <div class="col-12"> 
+      <p>The Surf Club at USF is a community of students passionate about surfing. It is open to USF students of all ages and skill levels. The club offers members a wide variety of opportunities to engage with their fellow students and the Florida surfing community. Whether you have never touched a surfboard or have been surfing all of your life, the Surf Club at USF seeks to enrich your college experience. </p> 
+
+      <p>Four loko Williamsburg 8-bit vegan, forage YOLO letterpress Brooklyn cray Helvetica wolf ugh deep v 90's. Gentrify photo booth fashion axe wolf gastropub actually. Jean shorts Austin asymmetrical pickled, wolf banh mi PBR vinyl polaroid. PBR&B McSweeney's shabby chic cardigan, brunch slow-carb tousled banjo chia. Narwhal next level mlkshk hashtag, Austin try-hard stumptown. Small batch organic stumptown, cliche Bushwick slow-carb wayfarers put a bird on it mlkshk typewriter keffiyeh Marfa. Tonx mlkshk tattooed, kogi squid meh ethical distillery trust fund hashtag PBR&B gastropub.</p>
+
+      <p>Sustainable cred drinking vinegar polaroid ennui, Etsy cardigan irony chia Marfa stumptown fap ugh High Life. Stumptown asymmetrical trust fund, blog hashtag vegan street art roof party typewriter Godard. Paleo swag banjo butcher Austin pug. Chillwave Brooklyn ennui bitters, Kickstarter Portland lo-fi jean shorts viral fixie selvage Pitchfork Banksy Wes Anderson. Mustache flexitarian irony, letterpress pour-over fap locavore craft beer wayfarers squid small batch keytar High Life Williamsburg fashion axe. Cray squid dreamcatcher put a bird on it fanny pack, next level roof party actually. Biodiesel art party irony meggings actually YOLO cred.</p>
+    </div>
+  </div>
 
   <hr>
 	{% include "footer.html" %}
