--- a/templates/contact.html
+++ b/templates/contact.html
@@ -26,8 +26,90 @@
 	<div class="body-wrapper debug container">
 
   <div class="row">
-    <div class="col-12"> <h1>Contact</h1> </div>
+    <div class="col-12 event-info"> <h1></h1> <p></p> </div>
   </div>
+
+
+  <div class="row">
+    <div class="col-6  event-info"> 
+      <img src="http://placehold.it/150x150" 
+   class="img-circle">
+      <h2>President</h2>
+      <p>Justin Campbell</p>
+      <p>Here lies information about Justin</p>
+    </div>
+
+    <div class="col-6  event-info"> 
+      <img src="http://placehold.it/150x150" 
+   class="img-circle">
+      <h2>Vice President</h2>
+      <p>Kiel Von Lindenburg</p>
+      <p>Here lies information about Kiel</p>
+    </div>
+  </div>
+  
+  <hr>
+
+  <div class="row">
+    <div class="col-6  event-info"> 
+      <img src="http://placehold.it/150x150" 
+   class="img-circle">
+      <h2>Treasurer</h2>
+      <p>Shane Spiers</p>
+      <p>Here lies information about Shane</p>
+    </div>
+
+    <div class="col-6  event-info"> 
+      <img src="http://placehold.it/150x150" 
+   class="img-circle">
+      <h2>Risk Manager</h2>
+      <p>David Kirk</p>
+      <p>Here lies information about David</p>
+    </div>
+  </div>
+  
+  <hr>
+
+  <div class="row">
+    <div class="col-6  event-info"> 
+      <img src="http://placehold.it/150x150" 
+   class="img-circle">
+      <h2>Volunteer & Fundraising Coordinator</h2>
+      <p>Stephanie Radu</p>
+      <p>Here lies information about Steph</p>
+    </div>
+
+    <div class="col-6  event-info"> 
+      <img src="http://placehold.it/150x150" 
+   class="img-circle">
+      <h2>Secretary & Social Networking Coordinator</h2>
+      <p>Kelly Bonnville</p>
+      <p>Here lies information about Kelly</p>
+    </div>
+  </div>
+  
+  <hr>
+
+
+
+   <div class="row">
+    <div class="col-12 event-info"> 
+        <img src="http://placehold.it/150x150" 
+     class="img-circle">
+        <h2>Webmaster</h2>
+        <p>Joshua Philpott</p>
+        <p>jphilpott@mail.usf.edu</p>
+        <p>(386)316-9856</p>
+    </div>
+  </div>
+
+   
+
+
+
+
+
+  
   <hr>
 	{% include "footer.html" %}
 	</div>
