--- a/templates/home-container.html
+++ b/templates/home-container.html
@@ -1,3 +1,40 @@
+     
+       <!--  Carousel - consult the Twitter Bootstrap docs at 
+      http://twitter.github.com/bootstrap/javascript.html#carousel -->
+      <div id="home-carousel" class="carousel slide"><!-- class of slide for animation -->
+        <div class="carousel-inner">
+          <div class="item active"><!-- class of active since it's the first item -->
+            <img src="http://placehold.it/1200x480" alt="" />
+            <div class="carousel-caption">
+              <p>Placeholder Image 1</p>
+            </div>
+          </div>
+          <div class="item">
+         
+            <img src="http://placehold.it/1200x480" alt="" />
+            <div class="carousel-caption">
+              <p>Placeholder Image 2</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="http://placehold.it/1200x480" alt="" />
+            <div class="carousel-caption">
+              <p>Placeholder Image 3</p>
+            </div>
+          </div>
+          <div class="item">
+            <img src="http://placehold.it/1200x480" alt="" />
+            <div class="carousel-caption">
+              <p>Placeholder Image 4</p>
+            </div>
+          </div>
+        </div><!-- /.carousel-inner -->
+        <!--  Next and Previous controls below
+              href values must reference the id for this carousel -->
+          <a class="carousel-control left" href="#home-carousel" data-slide="prev">&lsaquo;</a>
+          <a class="carousel-control right" href="#home-carousel" data-slide="next">&rsaquo;</a>
+      </div><!-- /.carousel -->
+      
 
       <div class="row section debug">
 
@@ -10,53 +47,22 @@
              <img src="{{STATIC_URL}}img/slide-4.jpg" >
           </div>
         </div> -->
-        <div class="col-6 event-info" style="vertical-align:center">
-          <img src = "http://scontent-b-mia.xx.fbcdn.net/hphotos-prn1/14407_10151123918356693_1333556561_n.jpg" style=";width:75%%; border: thin solid black;"></img>
-        </div>
+        <!--<div class="col-12 event-info" style="vertical-align:center">
+          <img src = "http://scontent-b-mia.xx.fbcdn.net/hphotos-prn1/14407_10151123918356693_1333556561_n.jpg" style=";width:50%%; border: thin solid black;max-height:"></img>
+        </div> -->
 
+        <div class="col-1"></div>
 
+        <div class="col-10 alegreya">
+          <!--<h1>University of South Florida Surf Club</h1>-->
 
-        <div class="col-6 intro event-info alegreya">
-          <h1>University of South Florida Surf Club</h1>
-          <p>The USF Surf Club provides experienced and beginner surfers with an opportunity to meet up, compete, and most importantly, GO SURF! The 2013 club is active and provides a number of opportunities and resources to USF Surfers. The 2013 club has taken a number of east coast surf trips, participated in communitiy service events, and is planning a whole lot more! </p>
-          <!--
-          <ul>
-            <li>A Competetive Team</li>
-            <li>Surf Schools for Beginners</li>
-            <li>Club Board Use</li>
-            <li>On Campus Activities</li>
-            <li>Day Surf Trips to the Atlantic and Gulf Coasts</li>
-            <li>Spring Break and Summer Extended Surf Trips</li>
-          </ul>-->
+          <p>The Surf Club at USF is a community of students passionate about surfing. It is open to USF students of all ages and skill levels. The club offers members a wide variety of opportunities to engage with their fellow students and the Florida surfing community. Whether you have never touched a surfboard or have been surfing all of your life, the Surf Club at USF seeks to enrich your college experience. </p>
         </div>
         <div class="col-12">
           </br></br>
         </div>
       </div>
-<!--
-        <div class="event-info sourcesans">
-          <div class="col-4">
-            <h1> We Are ...</h1>
-            <p> Dessert muffin pastry sweet roll candy. I love candy canes tart macaroon. Cookie I love danish I love biscuit I love jujubes croissant. Pie muffin cake applicake icing pudding danish.  </p>
-          </div>
 
-          <div class="col-4">
-            <h1> We will... </h1>
-            <p>Gingerbread ice cream sesame snaps. Tootsie roll I love pudding carrot cake lollipop halvah unerdwear.com donut I love. Pie pastry dessert I love.</p>
-          </div>
-
-          <div class="col-4">
-            <h1> You Can Find... </h1>
-            <p> Cupcake ipsum dolor sit amet jujubes candy canes cheesecake. Cotton candy lemon drops sweet roll I love I love. Caramels pastry macaroon powder pudding toffee. </p>
-          </div>
-
-          <div class = "col-12 alegreya">
-              <h1> Find us on Facebook ! </h1>
-              <p>Cupcake ipsum dolor sit. Amet dessert chocolate bar tiramisu jelly-o unerdwear.com tootsie roll liquorice gummi bears. Candy jelly beans ice cream bonbon lollipop cupcake pie brownie. Carrot cake sweet icing sweet roll jelly beans oat cake pastry pudding marzipan. Powder lemon drops bonbon wafer liquorice gingerbread apple pie. Ice cream unerdwear.com icing biscuit bear claw jujubes. I love lollipop caramels croissant. I love candy lemon drops chocolate cake chocolate cake candy. Powder bonbon tiramisu sweet roll I love danish cotton candy muffin tiramisu. Apple pie gingerbread I love topping sweet roll chupa chups dragée jelly-o. Jujubes liquorice fruitcake chocolate tootsie roll oat cake wafer jujubes cookie. Gummi bears sweet topping chocolate bar. Dragée sweet roll marzipan. Soufflé gummi bears ice cream halvah pudding cupcake I love halvah.</p>
-          </div>
-        </div>
-      </div>
--->
       <link href='http://fonts.googleapis.com/css?family=Alegreya:400,900' rel='stylesheet' type='text/css'>
       <link href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:200,400|Passion+One:400,700|Titillium+Web:400,400italic' rel='stylesheet' type='text/css'>
 
