--- a/events/templates/events/eventsContainer.html
+++ b/events/templates/events/eventsContainer.html
@@ -1,4 +1,4 @@
-<div class="row section debug">
+<div class="row">
 	<div class="col-12 ">
 		<h1> Events </h1>
 		<p> Below you can find information on USF Surfs upcoming and previous events. </p>
