--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,12 +2,19 @@
       <footer>
         <div class="row">
           <div class="col-lg-12 event-info">
-            <p>Copyright &copy; USF Surf 2013. Designed by Joshua Philpott.</p>
+            <p>Copyright &copy; USF Surf 2014. Designed by Joshua Philpott.</p>
           </div>
         </div>
       </footer>
     <!-- Bootstrap core JavaScript -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <!-- Make sure to add jQuery - download the most recent version at http://jquery.com/ -->
+    <!-- Make sure to add jQuery - download the most recent version at http://jquery.com/ 
     <script src="js/jquery.js"></script>
-    <script src="js/bootstrap.js"></script>
+    <script src="js/bootstrap.js"></script>-->
+
+     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script> 
+ <script src="{{STATIC_URL}}js/bootstrap.js"></script>   
+ <script src="{{STATIC_URL}}js/script.js"></script>
+ <link href="http://fonts.googleapis.com/css?family=Arvo" rel="stylesheet" type="text/css">
+ <link href="http://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet" type="text/css">
+ <script src="{{STATIC_URL}}js/jquery.slides.min.js"></script>
